2007-03-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponent+Agenor.m ([UIxComponent
	-getICalPersonsFromValue:selectorValue]): removed useless
	"isAccessRestricted" method.

	* UI/Scheduler/UIxCalInlineAptView.m ([UIxCalInlineAptView
	-setStyle:_style]): test whether the values of orgmail and
	partmails are null before manipulating them, otherwise SOGo sends
	a "rangeOfString:" message to an NSNull, which makes it crashes.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromEvent:_event]): we now use the new
	"symbolicAccessClass" method from iCalEntity to determine the
	value of the "classifiction" field.
	([OCSiCalFieldExtractor -extractQuickFieldsFromTodo:_task]): same
	as above.

2007-03-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchCoreInfosFrom:_startDateto:_endDatecomponent:_component]):
	see below, the query is adapted consequently.

	* OGoContentStore/OCSiCalFieldExtractor.m ([OCSiCalFieldExtractor
	-extractQuickFieldsFromTodo:_task]): the field "ispublic" was
	renamed to "classification" and can any integer as value.
	([OCSiCalFieldExtractor -extractQuickFieldsFromEvent:_event]):
	idem.

2007-02-26  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([_UIxHTMLMailContentHandler -_appendStyle:_charslength:_len]):
	don't prepend anything to the class and id named. Instead, we
	make each style embedded in the ".SOGoHTMLMail-CSS-Delimiter"
	class.

2007-02-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-rolesOfUser:logininContext:context]): if object does not exists
	(for example when it's being created), the current user has the
	same rights on it than he/she has on its parent container.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-nameExistsInFolder:objectName]): methods that tests if a c_name